# PhantomMirror

./: .gitignore  .gitmodules  BRANDING.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  README.md  RELEASES.md  SECURITY.md  THIRD_PARTY_NOTICES.md  app-config.example.json
.github/workflows/: release-build.yml
docs/: qt-lgpl-compliance.md  release-and-updates.md  repository-migration.md  spout2-overlay.md
resources/: resources.qrc
scripts/: package-windows.ps1
src/app/: app_config.cpp  app_config.h  app_icon.cpp  app_icon.h  app_strings.cpp  app_strings.h  arrow_combo_box.cpp  arrow_combo_box.h  hotkey_edit.cpp  hotkey_edit.h  main.cpp  main_window.cpp  main_window.h  ndi_controller.cpp  ndi_controller.h  onboarding_dialog.cpp  onboarding_dialog.h  settings_dialog.cpp  settings_dialog.h  spout_controller.cpp  spout_controller.h  theme.cpp  theme.h  theme_toggle.cpp  theme_toggle.h  toggle_switch.cpp  toggle_switch.h  updater.cpp  updater.h
src/native/: ndi_overlay.cpp  ndi_overlay.h  ndi_sdk.cpp  ndi_sdk.h  spout_overlay.cpp  spout_overlay.h  spout_winmm_compat.h
